Revert "fix: hide x overflow in app component"
This reverts commit 992b22ac5f87b524132e938a4e4df1f6e33038f9.

--- a/style.css
+++ b/style.css
@@ -28,10 +28,6 @@ html {
     line-height: 1.5;
 }
 
-app-root {
-    overflow-x: hidden;
-}
-
 section {
     display: flex;
     flex-direction: column;
